--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
   <main class="container py-5">
     <h1 class="display-5 fw-bold mb-4">Benvinguts als Projectes</h1>
     <p class="lead">Aquesta és una plantilla web amb menú desplegable, icones Font Awesome, mode clar i fosc, i disseny responsiu per mòbil i ordinador utilitzant Bootstrap 5.3.8. Aquest és el punt de partida per editar tot i fer projectes amb el professor Francesc Pérez.</p>
-  </main>
+      <p class="lead">El primer codi que farem sera una cara amb p5js. La forma de la cara serà una el·lipse, els ulls també 
+        la boca serà un arc. Farem que la boca es mogui amb el volum del microfón. També ho farem amb la funció sinus que fara que la 
+        boca tingui moviment.</p>
+   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script>
